--- a/src/app.css
+++ b/src/app.css
@@ -61,7 +61,7 @@ body{
 .button{
     width: 40px;
     height: 40px;
-    background: rgb(180, 118, 180);
+    background: rgb(221, 176, 176);
     border-radius: 10px;
     font-size: 80px;
     display: flex;
@@ -78,14 +78,45 @@ body{
 .button:nth-child(1){
     margin-right: 10px;
 }
-.content{
-    width: 80%;
-    height: 100%;
-    background: green;
-}
 .one-note{
     width: 100%;
     height: 100px;
     background: purple;
     display: flex;
+    flex-direction: column;
+    padding: 5px;
+    position: relative;
+    margin-block: 5px;
+}
+.note-desc{
+    padding-left: 10px;
+    padding: 5px;
+    height: 100%;
+}
+.note-words{
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+}
+.content{
+    width: 80%;
+    height: 100%;
+    background: rgb(221, 176, 176);
+}
+.write-container{
+    padding: 20px 10px 10px 10px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.write-title{
+ background: white;
+ width: 100%;
+ height: 30px;
+}
+.write-content{
+    width: 100%;
+    height: 90%;
+    background: white;
 }
