--- a/src/app.css
+++ b/src/app.css
@@ -113,10 +113,25 @@ body{
 .write-title{
  background: white;
  width: 100%;
- height: 30px;
+ height: 50px;
+ border: none;
+ font-size: 32px;
+ padding-left: 10px;
+ border: none;
+ outline: none;
+ font-family: Karla;
+font-weight: bold;
 }
+
+
 .write-content{
     width: 100%;
     height: 90%;
     background: white;
+    border: none;
+    font-size: 32px;
+    padding: 10px;
+    border: none;
+    outline: none;
+    font-family: Karla;
 }
