--- a/src/app.css
+++ b/src/app.css
@@ -1,137 +1,150 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    background: #0B2434;
-    height: 100vh;
-    width: 100vw;
+body {
+  background: #0b2434;
+  height: 100vh;
+  width: 100vw;
 }
-#root{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#root {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.app{
-    background: #F5F5F5;
-    width: 95%;
-    height: 95%;
-    display: flex;
-    font-family: Karla;
+.app {
+  background: #f5f5f5;
+  width: 95%;
+  height: 95%;
+  display: flex;
+  font-family: Karla;
 }
-.sidebar{
-    width: 20%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 20px 10px;
+.sidebar {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 10px;
 }
-.title{
-    font-size: 40px;
-    position: relative;
+.title {
+  font-size: 40px;
+  position: relative;
 }
-.title::before{
-    height: 5px;
-    width: 107px;
-    content: '';
-    bottom: 0;
-    right: 0;
-    left: 0;
-    position: absolute;
-    background: wheat;
-    transform: scaleX(0);
+.title::before {
+  height: 5px;
+  width: 107px;
+  content: "";
+  bottom: 0;
+  right: 0;
+  left: 0;
+  position: absolute;
+  background: wheat;
+  transform: scaleX(0);
 }
-.title:hover::before{
-    transition: transform 1s;
-    transform-origin: left;
-    transform: scaleX(1);
+.title:hover::before {
+  transition: transform 1s;
+  transform-origin: left;
+  transform: scaleX(1);
 }
-.notes-container{
-    background: white;
-    width: 100%;
-    height: 100%;
+.notes-container {
+  background: white;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
-.control-panel{
-    display: flex;
-    margin-block: 10px;
+.control-panel {
+  display: flex;
+  margin-block: 10px;
 }
-.button{
-    width: 40px;
-    height: 40px;
-    background: rgb(221, 176, 176);
-    border-radius: 10px;
-    font-size: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.button {
+  width: 40px;
+  height: 40px;
+  background: rgb(221, 176, 176);
+  border-radius: 10px;
+  font-size: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.button:active{
-    box-shadow: 1px 1px 5px 1px black;
+.button:active {
+  box-shadow: 1px 1px 5px 1px black;
 }
-.button img{
-    width: 30px;
-    height: 30px;
+.button img {
+  width: 30px;
+  height: 30px;
 }
-.button:nth-child(1){
-    margin-right: 10px;
+.one-note {
+  width: 100%;
+  height: 100px;
+  background: rgb(179, 236, 132);
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  position: relative;
+  margin-block: 5px;
 }
-.one-note{
-    width: 100%;
-    height: 100px;
-    background: purple;
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-    position: relative;
-    margin-block: 5px;
+.note-desc {
+  padding-left: 10px;
+  padding: 5px;
+  height: 100%;
+  width: 75%;
 }
-.note-desc{
-    padding-left: 10px;
-    padding: 5px;
-    height: 100%;
+.note-words {
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
 }
-.note-words{
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
+.content {
+  width: 80%;
+  height: 100%;
+  background: rgb(221, 176, 176);
 }
-.content{
-    width: 80%;
-    height: 100%;
-    background: rgb(221, 176, 176);
+.write-container {
+  padding: 20px 10px 10px 10px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.write-container{
-    padding: 20px 10px 10px 10px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.write-title{
- background: white;
- width: 100%;
- height: 50px;
- border: none;
- font-size: 32px;
- padding-left: 10px;
- border: none;
- outline: none;
- font-family: Karla;
-font-weight: bold;
+.write-title {
+  background: white;
+  width: 100%;
+  height: 50px;
+  border: none;
+  font-size: 32px;
+  padding-left: 10px;
+  border: none;
+  outline: none;
+  font-family: Karla;
+  font-weight: bold;
 }
 
-
-.write-content{
-    width: 100%;
-    height: 90%;
-    background: white;
-    border: none;
-    font-size: 32px;
-    padding: 10px;
-    border: none;
-    outline: none;
-    font-family: Karla;
+.write-content {
+  width: 100%;
+  height: 90%;
+  background: white;
+  border: none;
+  font-size: 32px;
+  padding: 10px;
+  border: none;
+  outline: none;
+  font-family: Karla;
+}
+.delete {
+  position: absolute;
+  background: red;
+  right: 5px;
+  top: 5px;
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  background: rgb(221, 176, 176);
+  border-radius: 10px;
+}
+.delete img {
+  width: 30px;
+  height: 30px;
 }
